--- a/src/templates/sign-up.html
+++ b/src/templates/sign-up.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Sign-up{% endblock %} {% block content %}
 
 <form method="POST">
-    <h3 align="center">Login</h3>
+    <h3 align="center">Sign up</h3>
     <div class="form-group">
         <label for="name">Username</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" />
