--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -15,11 +15,12 @@ body {
 }
 
 input {
-    border: 1px solid var(--input-border);
+    border: 1px solid;
     transition: border .3s ease;
     background-color: #f1f1f1;
     padding: 9px;
     font-size: 17px;
+    border-radius: 12px;
 }
 
 input[type=text] {
@@ -28,45 +29,50 @@ input[type=text] {
     width: 1%;
     line-height: 25px;
     width: 100%;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
 }
 
 input[type=password] {
     background-color: #a4aaaf;
     width: 100%;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
 }
 
-input[type=submit] {
+button {
+    font-size: 17px;
     border: 3px solid transparent;
     background-color: #0c2233;
     color: #ffffff;
     cursor: pointer;
-    border-radius: 15px;
+    border-radius: 12px;
+    padding: 10px 15px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+}
+
+button[type=submit] {
+    background-color: #0c2233;
+    color: #ffffff;
+    border: 3px solid transparent;
+    cursor: pointer;
+    border-radius: 12px;
+    padding: 10px 15px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
 }
 
 button[type=uprate] {
     border: 3px solid transparent;
     background-color: #98D7C2;
     color: #ffffff;
-    cursor: pointer;
-    border-radius: 15px;
 }
 
 button[type=downrate] {
     border: 3px solid transparent;
     background-color: #E43D40;
     color: #ffffff;
-    cursor: pointer;
-    border-radius: 15px;
 }
 
 .autocomplete-items {
