--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-
+    <link rel="shortcut icon" href="{{ url_for('static', filename='icon/favicon.ico') }}" />
     <title>{% block title %}Home{% endblock %}</title>
     {% block head %} {% endblock %}
 </head>
